# Arch-Linux-UEFI-system

./: .gitignore  CMakeLists.txt  README.md
Arch/: Core.cpp  Makefile  core.cpp
Arch/lib/: Arch.hpp  arch.h
Arch/src/: Arch.cpp  arch.cpp
arch-installer/include/: Arch.hpp
arch-installer/include/core/: Command.hpp  Context.hpp  Manifest.hpp  NetCheck.hpp  PartitionCheck.hpp  Pipeline.hpp  Runner.hpp
arch-installer/src/: Arch.cpp  main.cpp
arch-installer/src/core/: Manifest.cpp  NetCheck.cpp  PartitionCheck.cpp  Pipeline.cpp  Runner.cpp
arch-installer/src/manifests/: base.yml  bootloader.yml
arch-installer/src/manifests/desktops/: i3.yml  xfce.yml
